# src/modules/auth/models/auth.model.ts
@@ -1,0 +1,11 @@
+export interface ResponseAuthData {
+  id: string;
+  login: string;
+  token: string;
+  refreshToken: string;
+}
+
+export interface AuthData {
+  login: string;
+  password: string;
+}
